deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confidential-inferencing
  labels:
    app.kubernetes.io/part-of: confidential-inferencing
