deploy/service-confidential.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-confidential
  namespace: confidential-inferencing
  labels:
    app: inference-confidential
spec:
  selector:
    app: inference-confidential
  ports:
    - name: http
      port: 8080
      targetPort: http
