deploy/service-plaintext.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-plaintext
  namespace: confidential-inferencing
  labels:
    app: inference-plaintext
spec:
  selector:
    app: inference-plaintext
  ports:
    - name: http
      port: 8080
      targetPort: http
