deploy/route-plaintext.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inference-plaintext
  namespace: confidential-inferencing
spec:
  to:
    kind: Service
    name: inference-plaintext
  port:
    targetPort: http
  tls:
    termination: edge
